# m3u8-mcp

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cdp_browser.rs  config.rs  database.rs  ffmpeg_wrapper.rs  image_processor.rs  lib.rs  m3u8_parser.rs  main.rs  mcp_server.rs  redmine_client.rs  simple_browser.rs
src/components/: BrowserStatus.tsx  M3u8Form.tsx
