[package]
name = "cdp-mcp"
version = "0.1.0"
description = "Chrome DevTools Protocol MCP Server"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cdp_mcp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# MCP Server dependencies
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"
# MCP Schema for type definitions
mcp-schema = { git = "https://github.com/yonaka15/mcp-schema.git" }
form_urlencoded = "1.2"

# Browser automation via Chrome DevTools Protocol
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
base64 = "0.22"
lazy_static = "1.5"
dirs = "5.0"
image = "0.25.6"

